A lots of critical and less critical bugs found by FindBugs